--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@bilalyaver/yvr-headless-cms",
+	"name": "yvr-headless-cms",
 	"description": "A headless CMS boilerplate with Node.js, Mongoose, Nextjs and CLI",
-	"version": "0.0.11",
+	"version": "0.0.13",
 	"license": "MIT",
 	"homepage": "https://github.com/bilalyaver/nodejs-boilerplate#readme",
 	"bin": {
@@ -60,8 +60,5 @@
 	},
 	"devDependencies": {
 		"prettier": "^2.7.1"
-	},
-	"publishConfig": {
-		"registry": "https://npm.pkg.github.com/"
 	}
 }
